syntax = "proto3";
option java_multiple_files = true;
option cc_generic_services = true;
option java_generic_services = true;
package com.helpdesk;

import "Common.proto";

message IssueResponse {
  int32 id = 1;
  int32 requestId = 2;
  int32 requesterId = 3;
  string body = 4;
  NullableInt64 created = 6;
}

message IssueResponses {
  repeated IssueResponse issueResponses = 1;
}